# queryshield

./: .gitignore  CHANGELOG.md  CHANGELOG.md.docx  EXECUTION_ROADMAP.md  FASTAPI_SQLALCHEMY_GUIDE.md  LAUNCH_SUMMARY.md  LAUNCH_v0.3.0.md  LICENSE  PRODUCTION_MONITORING.md  PYPI_PUBLICATION_GUIDE.md  README.md  TEST_REPORT_v030.md  V030_LAUNCH_REPORT.md  queryshield.yml.example  queryshield_webpage.html  readme.md.docx  todo.md.docx
.github/scripts/: commit_artifacts.py
.github/workflows/: queryshield.yml  release.yml
queryshield/: queryshield.yml
queryshield-action/: README.md  action.yml  package.json  tsconfig.json
queryshield-action/src/: github_checks.ts  main.ts
queryshield-core/: README.md  pyproject.toml
queryshield-core/queryshield_core/: __init__.py  budgets.py  utils.py
queryshield-core/queryshield_core/analysis/: __init__.py  classify.py  explain_checks.py  ml_suggestions.py
queryshield-core/tests/: test_ai_analysis.py  test_ai_analysis_corrected.py  test_ai_analysis_extended.py
queryshield-monitoring/: README.md  pyproject.toml
queryshield-monitoring/queryshield_monitoring/: __init__.py  django_middleware.py  fastapi_middleware.py  middleware.py
queryshield-monitoring/tests/: __init__.py  test_monitoring.py
queryshield-saas/: Dockerfile  docker-compose.yml
queryshield-saas/backend/: README.md  pyproject.toml
queryshield-saas/backend/app/api/: production_queries.py
queryshield-saas/backend/app/integrations/: slack_notifier.py
queryshield-saas/backend/app/models/: production_queries.py  webhooks.py
queryshield-saas/backend/queryshield_saas/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
queryshield-saas/backend/queryshield_saas/routes/: __init__.py  auth.py  health.py  organizations.py  reports.py
queryshield-sqlalchemy/: README.md  pyproject.toml
queryshield-sqlalchemy/queryshield_sqlalchemy/: __init__.py  probe.py  report.py
queryshield-sqlalchemy/queryshield_sqlalchemy/runners/: __init__.py  pytest_plugin.py
queryshield/cli/: README.md  pyproject.toml
queryshield/cli/queryshield_cli/: production_monitor.py
queryshield/ide-plugin/: build.gradle.kts  settings.gradle.kts
queryshield/ide-plugin/src/main/kotlin/: InlayProvider.kt  RunAnalysisAction.kt  Settings.kt  SettingsConfigurable.kt  ToolWindowFactory.kt
queryshield/probe/: README.md  pyproject.toml
queryshield/probe/queryshield_probe/: api_client.py  cost_analysis.py  explain_mysql.py
queryshield/probe/tests/: test_budgets.py  test_explain_checks.py
queryshield/sample-django-app/: docker-compose.yml  manage.py
queryshield/sample-django-app/.queryshield/: after.json  before.json
queryshield/sample-django-app/app/: models.py  views.py
queryshield/sample-django-app/app/migrations/: 0001_initial.py
queryshield/sample-django-app/app/tests/: test_nplus1.py
queryshield/sample-django-app/sample_django_app/: settings.py  urls.py  wsgi.py
sample-fastapi-app/: README.md  pyproject.toml
sample-fastapi-app/app/: __init__.py  main.py  models.py
sample-fastapi-app/tests/: __init__.py  test_nplus1.py
schema/: queryshield_report_v1.json
scripts/: smoke_sample.ps1  smoke_sample.sh
