[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "queryshield-sqlalchemy"
version = "0.2.0"
description = "QueryShield probe for FastAPI and SQLAlchemy ORM"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "QueryShield", email = "dev@queryshield.io" }]
dependencies = [
  "queryshield-core>=0.2.0",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://queryshield.io"
Repository = "https://github.com/queryshield/queryshield"

[tool.hatch.build.targets.wheel]
packages = ["queryshield_sqlalchemy"]
