[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "queryshield-sample-fastapi"
version = "0.2.0"
description = "QueryShield sample FastAPI + SQLAlchemy application"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "queryshield-sqlalchemy>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
