[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "queryshield-probe"
version = "0.3.0"
description = "Django DB query probe for QueryShield"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "QueryShield", email = "dev@queryshield.io" }]
dependencies = [
  "Django>=4.2",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://example.com/queryshield"

[tool.hatch.build.targets.wheel]
packages = ["queryshield_probe"]
